--- a/.github/workflows/test-signing-and-pushing.yml
+++ b/.github/workflows/test-signing-and-pushing.yml
@@ -74,7 +74,7 @@ jobs:
           dirctl_client_id: ${{ secrets.DIRCTL_APIKEY_CLIENT_ID }}
           dirctl_secret: ${{ secrets.DIRCTL_APIKEY_SECRET }}
           record_file: ${{ env.TEST_RECORD }}
-          record_name: "pre-signed-record"
+          record_name: "gha-test-record"
           record_version: ${{ steps.set_version.outputs.version }}
 
       - name: Verify and upload
@@ -231,7 +231,7 @@ jobs:
           dirctl_secret: ${{ secrets.DIRCTL_APIKEY_SECRET }}
           record_file: ${{ env.TEST_RECORD }}
           organization_name: "test-github-actions-org-2"
-          record_name: "pre-signed-record"
+          record_name: "gha-test-record"
           record_version: ${{ steps.set_version.outputs.version }}
 
       - name: Verify and upload
