--- a/action.yml
+++ b/action.yml
@@ -49,7 +49,7 @@ inputs:
   dirctl_version:
     description: 'Version of dirctl to download and use.'
     required: false
-    default: 'v0.5.0-rc.3'
+    default: 'v0.5.1'
 
 runs:
   using: 'composite'
