--- a/action.yml
+++ b/action.yml
@@ -32,8 +32,8 @@ inputs:
     description: 'Path to the JSON file containing the directory record to push (relative to repository root).'
     required: true
   organization_name:
-    description: 'The name of the organization to push the record to. Overrides the organization in the record file.'
-    required: false
+    description: 'The organization name where to push the record.'
+    required: true
   record_name:
     description: 'The name of the record to be pushed. Overrides the name in the record file.'
     required: false
@@ -49,7 +49,7 @@ inputs:
   dirctl_version:
     description: 'Version of dirctl to download and use.'
     required: false
-    default: 'v0.3.0'
+    default: 'v0.5.1'
 
 runs:
   using: 'composite'
